# story-fab

./: .eslintrc.json  .gitignore  .mailmap  ARCHITECTURE-PLAN.md  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  DESIGN_SYSTEM.md  DEVELOPER.md  DEVELOPMENT_PLAN.md  DEVELOPMENT_PROGRESS.md  FEATURE_PLAN.md  INDUSTRY-RESEARCH.md  OPERATION_PLAN.md  OPTIMIZATION_ANALYSIS.md  PROJECT_PLAN.md  PROJECT_STATUS.md  README.md  REFACTORING-PLAN.md  REFACTORING.md  REFACTORING_REPORT.md  ROADMAP.md  SECURITY.md  SPEC.md  UI_OPTIMIZATION.md  babel.config.js  eslint.config.js  index.html  install.sh  jest.config.js  jsdoc.json  package-lock.json  package.json  pnpm-lock.yaml  react-performance-antipatterns.json  tailwind.config.ts  tsconfig.json  vite.config.js  vite.config.ts  vitest.config.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: binary.rs  highlight_detector.rs  lib.rs  lib_optimized.rs  main.rs  smart_segmenter.rs  subtitle.rs  types.rs  utils.rs  video_effects.rs  video_processor.rs
src-tauri/src/binary/: hw_accel.rs  mod.rs  resolver.rs
src-tauri/src/commands/: ai.rs  auto_save.rs  commentary.rs  crash_recovery.rs  ffprobe.rs  file_ops.rs  llm.rs  mod.rs  project.rs  render.rs
src-tauri/src/commands/ai/: detection.rs  director_plan.rs  tts.rs  tts_core.rs  types.rs
src-tauri/src/commands/auto_save/: tests.rs
src-tauri/src/commands/commentary/: commentary_synthesizer.rs  director.rs  mod.rs  script_generator.rs
src-tauri/src/commands/commentary/commentary_synthesizer/: mod.rs
src-tauri/src/commands/commentary/director/: commands.rs  mod.rs  state_ops.rs  states.rs  types.rs
src-tauri/src/commands/commentary/pipeline/: commands.rs  director.rs  mod.rs  script.rs  synthesize.rs  types.rs
src-tauri/src/commands/commentary/script_generator/: anthropic_call.rs  client.rs  gemini_call.rs  mod.rs  openai_call.rs  parsing.rs  prompts.rs  providers.rs  types.rs
src-tauri/src/commands/commentary/synthesizer/: commands.rs  mod.rs  struct_file.rs  synthesizer.rs  types.rs
src-tauri/src/commands/project/: commands.rs  storage.rs
src-tauri/src/commands/render/: autonomous_cut.rs  ffmpeg_builder.rs  mod.rs  preview.rs  subtitle_burnin.rs  transcode.rs
src-tauri/src/commands/render/autonomous_cut/: mod.rs  postprocess.rs
src-tauri/src/highlight/: audio_analysis.rs  combiner.rs  energy.rs  mod.rs  scene_detect.rs  scene_detect.test.rs  types.rs  zcr.rs
src-tauri/src/llm/: constants.rs  helpers.rs  mod.rs  models.json  parsing.rs  types.rs
src-tauri/src/llm/providers/: anthropic.rs  deepseek_qwen.rs  gemini.rs  mod.rs  openai.rs  openai_compat.rs  router.rs
src-tauri/src/segment/: classifier.rs  energy.rs  mod.rs  scene.rs  segmenter.rs  segmenter.test.rs  types.rs
src-tauri/src/subtitle/: mod.rs  transcribe.rs  transcribe.test.rs  types.rs  whisper.rs  whisper_transcribe.py.tmpl
src-tauri/src/utils/: audio.rs  concat.rs  crash_recovery.rs  error.rs  media_cache.rs  mod.rs  panic_hook.rs  process.rs  resilience.rs  semaphore.rs  time.rs
src-tauri/src/video/: audio_duration.rs  ffmpeg_cmd.rs  keyframes.rs  metadata.rs  mix_audio.rs  mod.rs  processor.rs  thumbnail.rs
src-tauri/tests/: audio_mix.rs  crash_recovery.rs  resilience.rs
(+2368 files in other folders)
