[package]
name = "CutDeck"
version = "1.0.0"
description = "CutDeck - AI 驱动的专业智能视频剪辑工具"
authors = ["Agions <agions@qq.com>"]
license = "MIT"
edition = "2021"

[lib]
name = "cutdeck_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = ["devtools"] }
tauri-plugin-dialog = "2.0"
tauri-plugin-fs = "2.0"
tauri-plugin-shell = "2.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
tokio = { version = "1", features = ["process", "rt-multi-thread"] }
anyhow = "1"
thiserror = "2"
dirs = "6"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
