[package]
name = "CutDeck"
version = "2.0.0"
description = "CutDeck - AI 驱动的专业智能视频剪辑工具"
authors = ["Agions <agions@qq.com>"]
license = "MIT"
edition = "2021"

[lib]
name = "cutdeck_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = [] }
tauri-plugin-dialog = "2.7"
tauri-plugin-fs = "2.5"
tauri-plugin-shell = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-notification = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-deep-link = "2"
tauri-plugin-store = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio = { version = "1", features = ["process", "rt-multi-thread", "fs"] }
anyhow = "1"
thiserror = "2"
dirs = "6"

[profile.release]
lto       = "thin"
codegen-units = 1
strip        = true
opt-level    = "s"
panic = "abort"
